/**2.0.0 - 2025.03.19**/
- Updated: Remove manual add review

/**1.2.18 - 2025.01.03**/
- Updated: VillaTheme support

/**1.2.17 - 2024.11.23**/
– Updated: Compatible with WP 6.7 and WC 9.4
– Updated: Update support class

/**1.2.16 - 2024.06.17**/
– Updated: Compatible with WC 8.9

/**1.2.15 - 2024.04.13**/
– Updated: Compatible with WP 6.5 and  WC 8.7
– Updated: Update support class

/**1.2.14 – 2023.07.03*/
– Updated: Compatible with WooCommerce HPOS(COT)

/** 1.2.13 - *2023.02.21*/
– Updated: Add 'Virtual reviews' type to review filter at reviews page

/** 1.2.12 - *2022.11.19*/
- Fixed: Add review in all product page with quantity in range & PHP8

/** 1.2.11 - *2022.07.15*/
– Updated: Pro version URL

/** 1.2.10 - *2022.07.06*/
- Changed: Plugin name

/** 1.2.9 - *2022.07.05*/
- Changed: Plugin name
- Updated: Premium version URL
- Updated: Categories selected by term id

/** 1.2.7 - 2022.06.08**/
- Updated: Home plugin url
- Updated: check compatible with WordPress 6.0

/** 1.2.6 - 2022.05.26 **/
– Updated: Check Pro version active

/** 1.2.5 - 2022.03.29 **/
– Updated: VillaTheme_Support

/** 1.2.4 - 2022.03.24 **/
– Updated: Unlimit reviews

/** 1.2.3 - 2022.03.21 **/
– Updated: VillaTheme_Support

/**1.2.2 - 2022.02.22 **/
- Updated: Hook for show variation attributes label

/**1.2.1 - 2021.09.18 **/
- Updated: Hook for limit quantity

/**1.2.0 - 2021.09.15 **/
- Updated: Random quantity in range

/**1.1.2.4 - 2021.07.31 **/
- Updated: Update support file

/**1.1.2.3 - 2021.06.18 **/
- Updated: Update support file

/**1.1.2.2 - 2021.06.12 **/
- Fixed: Error with product was removed

/**1.1.2.1 - 2021.06.01 **/
- Update: Dashboard notices

**1.1.2- 2021.05.27**
- Fixed: Show purchased icon

**1.1.1- 2021.03.29**
- Fixed: Label row in setting page

**1.1.0- 2021.03.18**
- Updated: Fix 0 review bug

**1.0.5- 2020.09.18**
- Fixed: Comment count

**1.0.3- 2020.04.23**
- Fixed: Rate count, date

**1.0.2.6- 2020.04.23**
- Updated: Support file
