@@ -1,5 +1,6 @@
 /**2.0.0 - 2025.03.19**/
-- Updated: Remove manual add review
+- Updated: Remove manual add review feature
+- Updated: Remove manual add reply feature
 
 /**1.2.18 - 2025.01.03**/
 - Updated: VillaTheme support
